--- a/angular.json
+++ b/angular.json
@@ -28,6 +28,7 @@
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
             ],
+            "baseHref": "https://alozano7591.github.io/LegalLabAngular/",
             "scripts": []
           },
           "configurations": {
